# stat-arb-pairs-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_demo.py
src/stat_arb_engine/: __init__.py  backtest.py  data.py  metrics.py  strategy.py
tests/: test_engine.py  test_metrics.py
