[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-arb-pairs-engine"
version = "0.1.0"
description = "Cointegration-style statistical arbitrage pairs-trading research engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "yfinance>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

